# Memory-Allocate-in-CPP

./: CMakeLists.txt  Makefile  README.md  main.cc
interface/: ainterface.cc  ainterface.h  interface.cc  interface.h
memory/: CMakeLists.txt  memory.cc  memory.h
